--- a/VotingSystem/CMakeLists.txt
+++ b/VotingSystem/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_requirements(VERSION 3.10)
+cmake_minimum_required(VERSION 3.10)
 project(VotingSystem)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -8,4 +8,5 @@ add_executable(VotingSystem
     Candidate.cpp
     Voter.cpp
     Election.cpp
+    party.cpp
 )
