Add: ClearBallot service infrastructure with Election delegation
- ClearBallotService: Core service managing multiple elections
- ServiceClient: Interface layer for console applications
- Service maintains full compatibility with existing Election class
- Thread-safe multi-election support with mutex protection
- Comprehensive ServiceResponse structure for client communication
- VoterRegistrationData structure for type-safe voter data
- ServiceTest: Validates all service functionality including:
  * Service lifecycle (start/stop)
  * Election creation and management
  * Voter registration with validation
  * Vote casting and status checking
  * Data persistence and CSV export
  * Direct Election access for backward compatibility

Architecture benefits:
- Separation of concerns (service vs interface)
- Foundation for future web/mobile interfaces
- Centralized election state management
- Concurrent access support
- Maintains all existing smart pointer patterns

--- a/VotingSystem/CMakeLists.txt
+++ b/VotingSystem/CMakeLists.txt
@@ -14,20 +14,33 @@ add_library(ElectionLib
     InputValidator.cpp
 )
 
+# ClearBallot Service Library
+add_library(ClearBallotServiceLib
+    ClearBallotService.cpp
+    ServiceClient.cpp
+)
+target_link_libraries(ClearBallotServiceLib ElectionLib)
+
 # Election Administration Tool
 add_executable(ElectionAdmin
     admin_main.cpp
 )
-target_link_libraries(ElectionAdmin ElectionLib)
+target_link_libraries(ElectionAdmin ElectionLib ClearBallotServiceLib)
 
 # Voter Interface
 add_executable(VoterInterface
     voter_main.cpp
 )
-target_link_libraries(VoterInterface ElectionLib)
+target_link_libraries(VoterInterface ElectionLib ClearBallotServiceLib)
 
 # Keep the original for compatibility
 add_executable(VotingSystem
     main.cpp
 )
-target_link_libraries(VotingSystem ElectionLib)
+target_link_libraries(VotingSystem ElectionLib ClearBallotServiceLib)
+
+# Service Infrastructure Test
+add_executable(ServiceTest
+    service_test.cpp
+)
+target_link_libraries(ServiceTest ElectionLib ClearBallotServiceLib)
