Add comprehensive unit tests for voting system components
- Implemented regional voting tests in `test_regional_voting.cpp` to validate region management, candidate uniqueness, party limits, and voter registration.
- Developed service architecture tests in `test_service_architecture.cpp` to ensure proper service lifecycle, election creation, and concurrent access handling.
- Created input validation tests in `test_input_validation.cpp` to verify the correctness of name, phone, ID, age, and address validations, including boundary and special cases.

--- a/VotingSystem/CMakeLists.txt
+++ b/VotingSystem/CMakeLists.txt
@@ -38,6 +38,12 @@ add_executable(VoterInterface
 )
 target_link_libraries(VoterInterface ElectionLib ClearBallotServiceLib)
 
+# Standalone ClearBallot Service
+add_executable(ClearBallotService
+    applications/service/service_main.cpp
+)
+target_link_libraries(ClearBallotService ElectionLib ClearBallotServiceLib)
+
 # Keep the original for compatibility
 add_executable(VotingSystem
     applications/main.cpp
@@ -61,3 +67,6 @@ add_executable(TestRestrictions
     applications/demos/test_restrictions.cpp
 )
 target_link_libraries(TestRestrictions ElectionLib)
+
+# Include testing directory
+add_subdirectory(tests)
